--- a/mapping-guide.org
+++ b/mapping-guide.org
@@ -45,7 +45,7 @@ This means that the =hallway= is connected to =your-bedroom= by a
 =exit=.
 
 So, from the hallway, the player can "=walk south=" to get to the
-=living-room= node, or "=walk east=" to go you =your-bedroom=.
+=living-room= node, or "=walk east=" to go to =your-bedroom=.
 
 * items
 The =items= alist contains a list of items you can grab in the game
@@ -62,7 +62,7 @@ This defines a =baseball= with the description in brackets.
 This description will be shown when the player uses =look= on it when
 the item is either in their inventory or is in the same room as them.
 
-* item-location-detauls
+* item-location-details
 This alist contains the default locations you'll find items you can
 take, along what they look like when undisturbed by the player.
 
@@ -238,7 +238,7 @@ action in the example way above, lemme drag it down here:
 
 #+BEGIN_SRC lisp
   (throw
-    ((baseball window)
+    ((baseball window) 500
      (when-player can see baseball and is in the hallway)
      (the window shatters into a waterfall of shards! oh
           jeez... you are going to be in trouble for this one
@@ -256,6 +256,7 @@ This entire action means:
 - The Message "The window shatters into a waterfall of shards! Oh
   jeez... You are going to be in trouble for this one for sure!
   The ball lands in the tall grass of the yard outside." displays
+- 500 trouble points will be awarded/afflicted upon the player.
 - Whenever walking in the hallway after this, or using =look=,
   the player will see the message "You are in a long hallway. A
   brisk wind gusts in from the shattered window."
