Updated documentation to remove dotted list thing.

--- a/mapping-guide.org
+++ b/mapping-guide.org
@@ -9,7 +9,7 @@ automagically used in the game.
 
 
 * player-location
-This is a dotted list to indicate where the player should start the
+This is a two-item list to indicate where the player should start the
 game...
 
 The default is:
