Made ASCII map of a sightly wider house.

--- a/map.org
+++ b/map.org
@@ -39,27 +39,26 @@ big place.) but several locations you can hide.
 ** Map
 Below is an ASCII representation of the layout of the starting house:
 #+BEGIN_EXAMPLE
-  +--------------+--------------+-----+-------------+
-  |..............|              |     |.............|
-  |..............| Your Bedroom #     |.............|
-  |..............*              |     |.............|
-  |..............|              |  H  |.............|
-  |..............|--------------+  a  |.............|
-  |..............|------------+ |  l  |.............|
-  |..............|            | |  l  *.............|
-  |..............|            | |  w  |.............|
-  |..............| Kitchen w/ | |  a  |.............|
-  |..Front.Yard..* Crawlspace | |  y  |..Back.Yard..|
-  |..............| underneath |-|     |.............|
-  |..............|            * *     |.............|
-  |..............|            |-|     +------#---+..|
-  |..............|--+#+-------+ |     |          |..|
-  |..............|--+#+---------+--#--+          |..|
-  |..............|                    |          |..|
-  |..............|                    |   Deck   |..|
-  |..............\                    \          |..|
-  |..............|   Living Room      |          |..|
-  |..............|                    |          |..|
-  |..............|                    +----------+..|
-  +--------------+--------------------+-------------+
+  +--------------+-------------+--------------+-----+-------------+
+  |..............|             |              |     |.............|
+  |..............|             * Your Bedroom #     |.............|
+  |..............|             |              |     |.............|
+  |..............| Living room |              |  H  |.............|
+  |..............|             |--------------+  a  |.............|
+  |..............|             |------------+ |  l  |.............|
+  |..............+---+         |            | |  l  *.............|
+  |..............| E |         |            | |  w  |.............|
+  |..............| n |         | Kitchen w/ | |  a  |.............|
+  |..Front.Yard..\ t #         # Crawlspace | |  y  |..Back.Yard..|
+  |..............| r |         | underneath |-|     |.............|
+  |..............| y |         |            * *     |.............|
+  |..............+---+----#----+            |-|     +------#---+..|
+  |..............|             |--+#+-------+ |     |          |..|
+  |..............|             |--+#+---------+--#--+          |..|
+  |..............|             |                    |          |..|
+  |..............|  Rec Room   |                    |   Deck   |..|
+  |..............|             #   Dining Room      \          |..|
+  |..............|             |                    |          |..|
+  |..............|             |                    +----------+..|
+  +--------------+-------------+--------------------+-------------+
 #+END_EXAMPLE
