Update ASCII map with room details downstairs and up.

--- a/map.org
+++ b/map.org
@@ -57,7 +57,7 @@ starting house:
   |..............|             |--+#+-------+ |     |          |..|
   |..............|             |--+#+---------+--#--+          |..|
   |..............|             |                    |          |..|
-  |..............|  Rec Room   |                    |   Deck   |..|
+  |..............|   Garage    |                    |   Deck   |..|
   |..............|             #   Dining Room      \          |..|
   |..............|             |                    |          |..|
   |..............|             |                    +----------+..|
@@ -70,22 +70,22 @@ And the basement:
   |   | Stairs  #     #              |
   |-#-+---------|     |              |
   |             |     |   Bedroom    |
-  |             |  H  |              |
-  |             |  a  |              |
+  |   Laundry   |  H  |              |
+  | and Storage |  a  |              |
   |             |  l  |              |
   +----#--------+  l  +--------------|
   |             |  w  |              |
   |             |  a  |              |
   |             |  y  |              |
-  |             #     #              |
+  |             #     #    Study     |
   |             |     |              |
+  |  Rec Room   |     |              |
   |             |     |              |
-  |             |     |              |
-  |             |--#--+--------------|
-  |             |                    |
-  |             |                    |
-  |             #                    |
-  |             |                    |
-  |             |                    |
-  +-------------+--------------------+
+  |             |--#--+----+----#----|
+  |             |          |         |
+  |             |          |         |
+  |             | Washroom |Washroom |
+  |             |          |         |
+  |             |          |         |
+  +-------------+----------+---------+
 #+END_EXAMPLE
